[package]
name = "handlers"
version = "0.1.0"
authors = ["UXTI <marap-dr@microsoft.com>"]
edition = "2018"
description = "Handlers"
publish = false

[lib]
name = "handlers"
path = "src/lib.rs"
crate-type = ["rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
